--- a/js/PianoRollLib/pianoRoll.css
+++ b/js/PianoRollLib/pianoRoll.css
@@ -42,6 +42,8 @@
     text-align: center;
     line-height: 50px;
     font-size: 120%;
+
+    cursor: pointer;
 }
 
 .pianoRollSquare {
@@ -51,6 +53,8 @@
     border-style: solid;
     border-color: gray;
     border-width: 1px;
+
+    cursor: pointer;
 }
 
 .pianoRollSquareHighlighted {
