refactored no modules, commented on pianoRoll lib

--- a/js/PianoRollLib/contourTest.css
+++ b/js/PianoRollLib/contourTest.css
@@ -77,6 +77,15 @@
     box-sizing: border-box;
 }
 
+.contourSelectedSquare {
+    flex-grow: 1;
+    background-color: rgb(255, 255, 255);
+    border-style: solid;
+    border-color: rgb(32, 134, 66);
+    border-width: 3px;
+    box-sizing: border-box;
+}
+
 .contourChoiceSquare:hover{
     background-color: rgb(235, 235, 8);
 }
@@ -89,6 +98,14 @@
     border-color: rgb(0, 0, 0);
     border-width: 3px;
     box-sizing: border-box;
+}
+
+.contourStartRow {
+    display: flex;
+    height: 50px;
+    box-sizing: border-box;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .contourRow {
